samples/_failures_safe/1761044268_0ca2d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38ba5e66.c: In function ‘main’:
./samples/SAFE/__tmp_38ba5e66.c:153:5: error: expected expression at end of input
  153 |     dfs(&
      |     ^~~
./samples/SAFE/__tmp_38ba5e66.c:153:5: error: too few arguments to function ‘dfs’
./samples/SAFE/__tmp_38ba5e66.c:95:6: note: declared here
   95 | void dfs(struct Graph *g, int start) {
      |      ^~~
./samples/SAFE/__tmp_38ba5e66.c:153:5: error: expected declaration or statement at end of input
  153 |     dfs(&
      |     ^~~
